<resources>
    <string name="_3_months">3 Months</string>
    <string name="_6_months">6 Months</string>
    <string name="_of_total_expense_in_this_period">of total expense in this period</string>
    <string name="_of_total_income_in_this_period">of total income in this period</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="account_analysis">Account analysis</string>
    <string name="account_balance_">Account balance:</string>
    <string name="account_details">Account details</string>
    <string name="account_icon">Account Icon</string>
    <string name="accounts">Accounts</string>
    <string name="add_expenses">Add expenses</string>
    <string name="add_new_account">Add new account</string>
    <string name="add_new_category">Add new category</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="add_new_income">Add new income</string>
    <string name="add_new_record">Add new record</string>
    <string name="add_new_transfer">Add new transfer</string>
    <string name="add_notes">Add notes</string>
    <string name="all_accounts">All accounts</string>
    <string name="amount_cannot_be_zero">Amount cannot be zero.</string>
    <string name="analysis">Analysis</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_language">App language</string>
    <string name="app_name">MyMoney Pro</string>
    <string name="app_name_with_version">MyMoney Pro : 5.3-pro</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appearance">Appearance</string>
    <string name="application">Application</string>
    <string name="arrow">→</string>
    <string name="back">Back</string>
    <string name="back_up_successful">Back up successful</string>
    <string name="backing_up">Backing up…</string>
    <string name="backup_directory">Backup directory</string>
    <string name="backup_now">Backup now</string>
    <string name="backup_restore">Backup &amp; Restore</string>
    <string name="balance">Balance</string>
    <string name="balance_">Balance:</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="budget_copied_successfully">Budget copied successfully</string>
    <string name="budget_expired">*Budget expired</string>
    <string name="budgeted_categories__">Budgeted categories: %1$s</string>
    <string name="budgets">Budgets</string>
    <string name="budgets_coping_to__">Budgets copying to: %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="carry_over_">Carry over:</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="category_details">Category details</string>
    <string name="caution">Caution</string>
    <string name="change_limit">Change limit</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_backup_restore_directory_for_mymoney">Choose your Backup &amp; Restore Directory for MyMoney.</string>
    <string name="choose_your_currency_sign">Choose your currency sign</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="configuration_changed">Configuration changed</string>
    <string name="contact_via_email">Contact via email</string>
    <string name="copy">Copy</string>
    <string name="copy_all">Copy all</string>
    <string name="copy_budget">Copy budget</string>
    <string name="currency">Currency</string>
    <string name="currency_position">Currency position</string>
    <string name="currency_sign">Currency sign</string>
    <string name="daily">Daily</string>
    <string name="dark_background">Dark background</string>
    <string name="day_view">Day view</string>
    <string name="decimal_place">Decimal places</string>
    <string name="default_web_client_id">279022432406-nrprv87ts51qit076tqqggsj9c1kjqgs.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_records">Delete all records</string>
    <string name="delete_reset">Delete &amp; Reset</string>
    <string name="deleted_successfully">Deleted successfully</string>
    <string name="deleting_">Deleting…</string>
    <string name="deleting_records_">Deleting records…</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="display_options">Display options</string>
    <string name="edit">Edit</string>
    <string name="edit_account">Edit account</string>
    <string name="edit_budget">Edit budget</string>
    <string name="edit_category">Edit category</string>
    <string name="enable">Enable</string>
    <string name="ending_balance">Ending balance</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="error">Error</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">Exit</string>
    <string name="expand_button_title">Advanced</string>
    <string name="expense">Expense</string>
    <string name="expense_categories">Expense categories</string>
    <string name="expense_category">Expense category</string>
    <string name="expense_flow">Expense flow</string>
    <string name="expense_in_this_period_">Expense in this period:</string>
    <string name="expense_overview">Expense overview</string>
    <string name="expense_so_far">Expense so far</string>
    <string name="expense_this_month_">Expense this month:</string>
    <string name="expenses">Expenses</string>
    <string name="export_records">Export records</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="i_ll_rate_later">"I'll rate later"</string>
    <string name="import_data_from_free_version">Import data from free version</string>
    <string name="like_my_money">Like MyMoney</string>
    <string name="management">Management</string>
    <string name="msg_intro_notification">Turn on reminder to get daily notifications for adding expenses. You can always change it later.</string>
    <string name="msg_intro_notification_warn">Notifications are disabled in system settings. MyMoney cannot show notifications until you enable them.</string>
    <string name="msg_special_rating_request">Seems like you are enjoying MyMoney. Would you mind taking a moment to write about it? Thanks for your support!</string>
    <string name="never_ask_me">Never ask me</string>
    <string name="ok">OK</string>
    <string name="passcode_for_new_record">Passcode for new record</string>
    <string name="preferences">Preferences</string>
    <string name="preview_">Preview:</string>
    <string name="pro_migration">Pro migration</string>
    <string name="pro_version">Pro version</string>
    <string name="q_like_my_money">Like MyMoney?</string>
    <string name="q_remind_everyday_to_record_expense">Remind everyday to add your expenses?</string>
    <string name="rate_it_now">Rate it now</string>
    <string name="reminder_from_mymoney">Reminder from MyMoney</string>
    <string name="reset_all">Reset all</string>
    <string name="show_reminder_notification">Show reminder notification</string>
    <string name="show_total_balance">Show total balance</string>
    <string name="sign">Sign</string>
    <string name="sign_div">÷</string>
    <string name="sign_dot">.</string>
    <string name="sign_equal">=</string>
    <string name="sign_minus">-</string>
    <string name="sign_mul">×</string>
    <string name="sign_plus">+</string>
    <string name="smart_input">Smart input</string>
    <string name="summary_delete_all">Delete everything including records, accounts, categories and budgets</string>
    <string name="summary_delete_all_records">Delete all records, but keeping current accounts, categories and budgets</string>
    <string name="summary_migration">Fetch all records, categories, accounts, budgets from free version if available</string>
    <string name="summary_reset_all">Resetting the app to its initial state, deleting current records, accounts categories, and budgets</string>
    <string name="summary_wgt_config_dark">Dark colored background for widget</string>
    <string name="summary_wgt_config_passcode">When enabled, adding new record from this widget will require passcode</string>
    <string name="summary_wgt_config_show_total">Show all accounts balance instead of last added time</string>
    <string name="summary_wgt_config_smart_input">Add record and quit instead of opening MyMoney</string>
    <string name="widget_preferences">Widget Preferences</string>
</resources>