<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline_v_center" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dp" android:text="@string/digit_2" app:layout_constraintEnd_toEndOf="@id/guideline_v_center" app:layout_constraintStart_toStartOf="@id/guideline_v_center" app:layout_constraintTop_toTopOf="parent" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dp" android:text="@string/digit_5" app:layout_constraintEnd_toEndOf="@id/guideline_v_center" app:layout_constraintStart_toStartOf="@id/guideline_v_center" app:layout_constraintTop_toBottomOf="@id/btn_2" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dp" android:text="@string/digit_8" app:layout_constraintEnd_toEndOf="@id/guideline_v_center" app:layout_constraintStart_toStartOf="@id/guideline_v_center" app:layout_constraintTop_toBottomOf="@id/btn_5" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dp" android:text="@string/digit_0" app:layout_constraintEnd_toEndOf="@id/guideline_v_center" app:layout_constraintStart_toStartOf="@id/guideline_v_center" app:layout_constraintTop_toBottomOf="@id/btn_8" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dp" android:text="@string/digit_1" app:layout_constraintEnd_toStartOf="@id/btn_2" app:layout_constraintTop_toTopOf="parent" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dp" android:text="@string/digit_4" app:layout_constraintEnd_toStartOf="@id/btn_5" app:layout_constraintTop_toBottomOf="@id/btn_1" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dp" android:text="@string/digit_7" app:layout_constraintEnd_toStartOf="@id/btn_8" app:layout_constraintTop_toBottomOf="@id/btn_4" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dp" android:text="@string/digit_3" app:layout_constraintStart_toEndOf="@id/btn_2" app:layout_constraintTop_toTopOf="parent" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dp" android:text="@string/digit_6" app:layout_constraintStart_toEndOf="@id/btn_5" app:layout_constraintTop_toBottomOf="@id/btn_3" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dp" android:text="@string/digit_9" app:layout_constraintStart_toEndOf="@id/btn_8" app:layout_constraintTop_toBottomOf="@id/btn_6" style="?buttonCalculator" />
</androidx.constraintlayout.widget.ConstraintLayout>
