<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:background="@drawable/bg_frame" android:visibility="visible" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_margin="1.5dp" app:layout_constraintBottom_toTopOf="@id/guideline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/iv_sign" android:padding="4.0dp" android:layout_width="24.0dp" android:layout_height="24.0dp" android:contentDescription="@string/sign" app:layout_constraintBottom_toBottomOf="@id/tv_display" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/tv_display" app:tint="?colorOnSurfaceDisabled" />
    <TextView android:gravity="end|center" android:id="@id/tv_display" android:padding="0.0dp" android:layout_width="0.0dp" android:layout_height="0.0dp" app:autoSizeMaxTextSize="68.0sp" app:autoSizeStepGranularity="2.0sp" app:autoSizeTextType="uniform" app:layout_constraintBottom_toTopOf="@id/guideline" app:layout_constraintEnd_toStartOf="@id/btn_c" app:layout_constraintStart_toEndOf="@id/iv_sign" app:layout_constraintTop_toTopOf="parent" style="?textDisplay" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_c" android:layout_width="0.0dp" android:layout_height="0.0dp" android:layout_margin="8.0dp" app:cornerRadius="?cornerSizeNormal" app:icon="@drawable/ic_backspace" app:iconTint="?colorOnSurface" app:iconTintMode="src_atop" app:layout_constraintBottom_toTopOf="@id/guideline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_percent="0.16" app:strokeWidth="0.0dp" style="?buttonStyleIcon" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.25" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_plus" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/sign_plus" app:layout_constraintBottom_toTopOf="@id/btn_minus" app:layout_constraintEnd_toStartOf="@id/btn_7" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/guideline" style="?buttonCalculatorSecondary" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_7" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/digit_7" app:layout_constraintBottom_toTopOf="@id/btn_4" app:layout_constraintEnd_toStartOf="@id/btn_8" app:layout_constraintStart_toEndOf="@id/btn_plus" app:layout_constraintTop_toBottomOf="@id/guideline" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_8" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/digit_8" app:layout_constraintBottom_toTopOf="@id/btn_5" app:layout_constraintEnd_toStartOf="@id/btn_9" app:layout_constraintStart_toEndOf="@id/btn_7" app:layout_constraintTop_toBottomOf="@id/guideline" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_9" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/digit_9" app:layout_constraintBottom_toTopOf="@id/btn_6" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_8" app:layout_constraintTop_toBottomOf="@id/guideline" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_minus" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/sign_minus" app:layout_constraintBottom_toTopOf="@id/btn_mul" app:layout_constraintEnd_toStartOf="@id/btn_4" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_plus" style="?buttonCalculatorSecondary" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_4" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/digit_4" app:layout_constraintBottom_toTopOf="@id/btn_1" app:layout_constraintEnd_toStartOf="@id/btn_5" app:layout_constraintStart_toEndOf="@id/btn_minus" app:layout_constraintTop_toBottomOf="@id/btn_7" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_5" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/digit_5" app:layout_constraintBottom_toTopOf="@id/btn_2" app:layout_constraintEnd_toStartOf="@id/btn_6" app:layout_constraintStart_toEndOf="@id/btn_4" app:layout_constraintTop_toBottomOf="@id/btn_8" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_6" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/digit_6" app:layout_constraintBottom_toTopOf="@id/btn_3" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_5" app:layout_constraintTop_toBottomOf="@id/btn_9" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_mul" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/sign_mul" app:layout_constraintBottom_toTopOf="@id/btn_div" app:layout_constraintEnd_toStartOf="@id/btn_1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_minus" style="?buttonCalculatorSecondary" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_1" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/digit_1" app:layout_constraintBottom_toTopOf="@id/btn_0" app:layout_constraintEnd_toStartOf="@id/btn_2" app:layout_constraintStart_toEndOf="@id/btn_mul" app:layout_constraintTop_toBottomOf="@id/btn_4" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_2" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/digit_2" app:layout_constraintBottom_toTopOf="@id/btn_dot" app:layout_constraintEnd_toStartOf="@id/btn_3" app:layout_constraintStart_toEndOf="@id/btn_1" app:layout_constraintTop_toBottomOf="@id/btn_5" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_3" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/digit_3" app:layout_constraintBottom_toTopOf="@id/btn_equal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_2" app:layout_constraintTop_toBottomOf="@id/btn_6" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_div" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/sign_div" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_mul" style="?buttonCalculatorSecondary" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_0" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/digit_0" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_dot" app:layout_constraintStart_toEndOf="@id/btn_div" app:layout_constraintTop_toBottomOf="@id/btn_1" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_dot" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/sign_dot" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_equal" app:layout_constraintStart_toEndOf="@id/btn_0" app:layout_constraintTop_toBottomOf="@id/btn_2" style="?buttonCalculator" />
    <com.google.android.material.button.MaterialButton android:id="@id/btn_equal" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/sign_equal" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_dot" app:layout_constraintTop_toBottomOf="@id/btn_3" style="?buttonCalculatorSecondary" />
</androidx.constraintlayout.widget.ConstraintLayout>
